--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,31 +1,85 @@
-#us-map{
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+html, body {
+    padding: 0;
+    margin: 0;
 }
-path:hover, circle:hover {
 
-  stroke-width:2px;
-  stroke-linejoin: round;
-  cursor: pointer;
+.map-heading {
+    font-weight: 300;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 36px;
+    text-align: center;
+    padding-top: 10px;
+    margin: 0;
 }
+
+.map-wrapper {
+    display: block;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+}
+
+#us-map {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 90vh;
+    text-align: center;
+    overflow: hidden;
+}
+
+.animation-wrapper {
+    display: none;
+}
+
+path, circle {
+    stroke: white;
+    stroke-width: 2px;
+    stroke-linejoin: round;
+}
+
 #path67 {
-  fill: none !important;
-  stroke: #A9A9A9 !important;
-  cursor: default;
+    stroke: #666666;
+    stroke-width: 4px;
+    cursor: default;
 }
-#info-box {
-  display: none;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  z-index: 1;
-  background-color: #ffffff;
-  border: 2px solid #BF0A30;
-  border-radius: 5px;
-  padding: 5px;
-  font-family: arial;
+
+path:hover, circle:hover {
+    cursor: pointer;
+    transition: 0.75s stroke;
+    stroke: red;
+    stroke-width: 5px;
+}
+
+.map-legend {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding-right: 15px;
+    padding-bottom: 15px;
+}
+
+.map-legend > div {
+    text-align: center;
+}
+
+.map-legend-label {
+    width: 100%;
+}
+
+.map-legend-label > p {
+    font-weight: 300;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    padding: 0;
+    margin: 0;
+}
+
+.map-legend-label > #left-legend-label {
+    float: left;
+}
+
+.map-legend-label > #right-legend-label {
+    float: right;
 }
