--- a/templates/home.html
+++ b/templates/home.html
@@ -87,7 +87,7 @@
                 <p id="right-legend-label"> More</p>
             </div>
             <div>
-                <div style="background: rgb(0, 0, 0) ; padding-left: 25px ; height: 100px ; display: inline"></div><p style="display: inline ; padding-left: 25px ; padding-right: 25px; font-size: 15px ; font-family: 'Open Sans'">&rarr;</p><div style="background: rgb(40, 248, 45) ; padding-left: 25px ; height: 100px ; display: inline"></div>
+                <div style="background: rgb(255, 255, 255) ; border: 1px solid black ; padding-left: 25px ; height: 100px ; display: inline"></div><p style="display: inline ; padding-left: 25px ; padding-right: 25px; font-size: 15px ; font-family: 'Open Sans'">&rarr;</p><div style="background: rgb(40, 248, 45) ; padding-left: 25px ; height: 100px ; border: 1px solid black ;display: inline"></div>
                 </div>
             </div>
 
