--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,9 @@ html, body {
 }
 
 .map-wrapper {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     padding: 0;
     margin: 0;
@@ -21,10 +23,6 @@ html, body {
 }
 
 #us-map {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 90vh;
     text-align: center;
     overflow: hidden;
 }
@@ -54,10 +52,8 @@ path:hover, circle:hover {
 
 .map-legend {
     position: absolute;
-    right: 0;
-    bottom: 0;
-    padding-right: 15px;
-    padding-bottom: 15px;
+    right: 30px;
+    bottom: 30px;
 }
 
 .map-legend > div {
