--- a/templates/home.html
+++ b/templates/home.html
@@ -93,6 +93,52 @@
             </div>
         </div>
 
+	<h1>National Average Data </h1>
+	<table>
+	  <tr>
+	    <td>2002</td>
+	    <td><div class="nation" id="y2"> </div></td>
+	  </tr>
+	  <tr>
+	    <td>2003</td>
+	    <td><div class="nation" id="y3"> </div></td>
+	  </tr>
+	  <tr>
+	    <td>2004</td>
+	    <td><div class="nation" id="y4"> </div></td>
+	  </tr>
+	  <tr>
+	    <td>2005</td>
+	    <td><div class="nation" id="y5"> </div></td>
+	  </tr>
+	  <tr>
+	    <td>2006</td>
+	    <td><div class="nation" id="y6"> </div></td>
+	  </tr>
+	  <tr>
+	    <td>2007</td>
+	    <td><div class="nation" id="y7"> </div></td>
+	  </tr>
+	  <tr>
+	    <td>2008</td>
+	    <td><div class="nation" id="y8"> </div></td>
+	  </tr>
+	  <tr>
+	    <td>2009</td>
+	    <td><div class="nation" id="y9"> </div></td>
+	  </tr>
+	  <tr>
+	      <td> 2010 </td>
+	      <td><div class="nation" id="y10"> </div></td>
+	  </tr>
+	</table>
+	<h1>State Average Data </h1>
+	<table>
+	  <tr>
+	    <td>2002</td>
+	    <td><div class="state" id="s2"></div></td>
+	  </tr>
+	</table>
         <!-- Scripts  -->
         <script type="text/javascript">
          $(".animation-wrapper").fadeIn(1500);
