--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
     </head>
     
     <body>
-        <div class="clone">
+        <div id="clone">
             <div class="animation-wrapper">
                 <div class="map-wrapper">
                     <h1 class="map-heading">School Scores v.s. Drugs</h1>
