state might be good

--- a/templates/home.html
+++ b/templates/home.html
@@ -123,8 +123,29 @@
     <h1>State Average Data </h1>
     <table>
       <tr>
-	<td>2002</td>
-	<td><div class="state" id="s2"></div></td>
+	<td>2006</td>
+	<td><div class="state" id="s6"></div></td>
+	<td><div class="ss" id="st6"></div></td>
+      </tr>
+      <tr>
+	<td>2007</td>
+	<td><div class="state" id="s7"></div></td>
+	<td><div class="ss" id="st7"></div></td>
+      </tr>
+      <tr>
+	<td>2008</td>
+	<td><div class="state" id="s8"></div></td>
+	<td><div class="ss" id="st8"></div></td>
+      </tr>
+      <tr>
+	<td>2009</td>
+	<td><div class="state" id="s9"></div></td>
+	<td><div class="ss" id="st9"></div></td>
+      </tr>
+      <tr>
+	<td>2010</td>
+	<td><div class="state" id="s10"></div></td>
+	<td><div class="ss" id="st10"></div></td>
       </tr>
     </table>
     <!-- Scripts  -->
