--- a/static/css/style.css
+++ b/static/css/style.css
@@ -110,3 +110,12 @@ path:hover, circle:hover {
     margin: 1px;
     color: white;
 }
+
+.ss div {
+    font: 10px sans-serif;
+    background-color: red;
+    text-align: right;
+    padding: 3px;
+    margin: 1px;
+    color: white;
+}
