--- a/templates/home.html
+++ b/templates/home.html
@@ -95,7 +95,7 @@
         </div>
 
 
-    <h1>National Average Data </h1>
+    <h1 style="font-family: 'Open Sans' ; font-weight: 400">National Average Data </h1>
     <table>
       <tr>
 	<td>2006</td>
