--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,6 +100,10 @@ td {
     font-family: 'Open Sans', 400;
 }
 
+table {
+    display: none;
+} 
+
 .nation div {
     font: 10px sans-serif;
     background-color: steelblue;
