--- a/static/css/style.css
+++ b/static/css/style.css
@@ -104,6 +104,14 @@ table {
     display: none;
 } 
 
+#table-heading {
+    display: none;
+}
+
+#state-table-heading {
+    display: none;
+}
+
 .nation div {
     font: 10px sans-serif;
     background-color: steelblue;
