--- a/templates/home.html
+++ b/templates/home.html
@@ -95,7 +95,7 @@
         </div>
 
 
-    <h1 style="font-family: 'Open Sans' ; font-weight: bold">National Average Data </h1>
+    <h1 id="table-heading" style="font-family: 'Open Sans' ; font-weight: bold">National Average Data </h1>
     <table>
       <tr>
 	<td>2006</td>
@@ -123,7 +123,7 @@
 	<td><div class="scores" id="sc10"></div></td>
       </tr>
     </table>
-    <h1>State Average Data </h1>
+    <h1 id="state-table-heading">State Average Data </h1>
     <table>
       <tr>
 	<td>2006</td>
