--- a/templates/home.html
+++ b/templates/home.html
@@ -99,57 +99,97 @@
             <table>
                 <tr>
 	                <td>2006</td>
+</tr>
+<tr>
 	                <td><div class="nation" id="y6"> </div></td>
-	                <td><div class="scores" id="sc6"></div></td>
                 </tr>
+                <tr>
+	                <td><div class="scores" id="sc6"></div></td>
+                </tr><br>
                 <tr>
 	                <td>2007</td>
+</tr>
+<tr>
 	                <td><div class="nation" id="y7"> </div></td>
-	                <td><div class="scores" id="sc7"></div></td>
                 </tr>
+                <tr>
+	                <td><div class="scores" id="sc7"></div></td>
+                </tr><br>
                 <tr>
 	                <td>2008</td>
+</tr>
+<tr>
 	                <td><div class="nation" id="y8"> </div></td>
-	                <td><div class="scores" id="sc8"></div></td>
                 </tr>
+                <tr>
+	                <td><div class="scores" id="sc8"></div></td>
+                </tr><br>
                 <tr>
 	                <td>2009</td>
+</tr>
+<tr>
 	                <td><div class="nation" id="y9"> </div></td>
-	                <td><div class="scores" id="sc9"></div></td>
                 </tr>
                 <tr>
+	                <td><div class="scores" id="sc9"></div></td>
+                </tr><br>
+                <tr>
 	                <td> 2010 </td>
+</tr>
+<tr>
 	                <td><div class="nation" id="y10"> </div></td>
-	                <td><div class="scores" id="sc10"></div></td>
                 </tr>
+                <tr>
+	                <td><div class="scores" id="sc10"></div></td>
+                </tr><br>
             </table>
-            <h1 id="state-table-heading">State Average Data </h1>
+            <h1 id="state-table-heading" style="font-family: 'Open Sans' ; font-weight: bold">State Average Data </h1>
             <table>
                 <tr>
 	                <td>2006</td>
+</tr>
+<tr>
 	                <td><div class="state" id="s6"></div></td>
-	                <td><div class="ss" id="st6"></div></td>
                 </tr>
+                <tr>
+	                <td><div class="ss" id="st6"></div></td>
+                </tr><br>
                 <tr>
 	                <td>2007</td>
+</tr>
+<tr>
 	                <td><div class="state" id="s7"></div></td>
-	                <td><div class="ss" id="st7"></div></td>
                 </tr>
+                <tr>
+	                <td><div class="ss" id="st7"></div></td>
+                </tr><br>
                 <tr>
 	                <td>2008</td>
+</tr>
+<tr>
 	                <td><div class="state" id="s8"></div></td>
-	                <td><div class="ss" id="st8"></div></td>
                 </tr>
+                <tr>
+	                <td><div class="ss" id="st8"></div></td>
+                </tr><br>
                 <tr>
 	                <td>2009</td>
+</tr>
+<tr>
 	                <td><div class="state" id="s9"></div></td>
-	                <td><div class="ss" id="st9"></div></td>
                 </tr>
                 <tr>
+	                <td><div class="ss" id="st9"></div></td>
+                </tr><br>
+                <tr>
 	                <td>2010</td>
+</tr>
+<tr>
 	                <td><div class="state" id="s10"></div></td>
-	                <td><div class="ss" id="st10"></div></td>
                 </tr>
+                <tr>
+	                <td><div class="ss" id="st10"></div></td>
+                </tr><br>
             </table>
         </div>
         <!-- Scripts  -->
